# vroozi-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg  test_db.py
.cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-le64.cache-8  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-8  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-8  d589a48862398ed80a3d6066f4f56f4c-le64.cache-8
app/: __init__.py  main.py
app/api/: __init__.py
app/config/: __init__.py  logging_config.py  settings.py
app/core/: __init__.py  auth.py  auth_dependencies.py  auth_utils.py  config.py  constants.py  dependencies.py  exceptions.py  logging.py  security.py  token_validation.py  user_utils.py
app/db/: __init__.py  mongodb.py  redis_client.py
app/middleware/: __init__.py  auth.py  auth_middleware.py  cors_middleware.py  error_handler.py  logging_middleware.py
app/models/: __init__.py  audit_log.py  base.py  contract.py  purchase_order.py  user.py
app/schemas/: __init__.py  activity.py  auth.py  contract.py  dashboard.py  ocr.py  purchase_order.py  user.py
app/services/: __init__.py  auth_service.py  contract_service.py  (+6 more)
control/: celery.pidbox.exchange  reply.celery.pidbox.exchange
kubernetes/: backend-configmap.yaml  backend-deployment.yaml  backend-ingress.yaml  backend-secrets.yaml  backend-service.yaml  celery-deployment.yaml  mongodb-statefulset.yaml  redis-deployment.yaml
scripts/: __init__.py  db_backup.py  db_restore.py  generate_api_docs.py  seed_data.py
tests/: __init__.py  conftest.py  test_ocr_service.py
(+43 files in other folders)
